# MetaC

./: .gitignore  meson.build  todo.md  union.c  vec.c  worklog.md
grammar/: Makefile  actions.txt  dict.c  dict.h  exec_tree.c  grammar.c  grammar.leg  grammar_get_tree.c  grammar_get_tree.h  grammar_objects.c  grammar_objects.h  list.c  list.h  meson.build  meta_example.md  objects.c  objects.h  raw.leg  test.leg  test.sh  test_get_tree.c  test_list.c  vec.h  wonkyregex.c  wonkyregex.h
numbers/: meson.build  numbers.c  numbers.leg  numbers_tree.c  numbers_tree.leg  objects_num_tree.c  objects_num_tree.h  objects_num_treeold.c
proto/: Makefile  bench.txt  minproto  minproto.leg  rawthing.c  test.txt
